# Easy-Build-With-Bazel

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: publish.yml
cpp/: BUILD.bazel
cpp/libfoo/: foo.cpp
docs/: episode_00_script.md  episode_01_script.md  knowledge_graph.puml  knowledge_tree.drawio  knowledge_tree.md  lecture_00.md  lecture_01.md  lecture_01_outline.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_starlark.md
go/: BUILD.bazel
java/: BUILD.bazel  hello_world.java
src/lecture_0/: MODULE.bazel
src/lecture_0/cpp/libfoo/: foo.h
src/lecture_0/cpp/tests/: BUILD.bazel  test_foo.cpp
src/lecture_0/go/: foo.go  my_main.go
src/lecture_0/python/: main.py
src/lecture_0/python/libfoo/: foo.py
src/lecture_0/rust/: BUILD.bazel
src/lecture_00/: MODULE.bazel
src/lecture_00/cpp/: BUILD.bazel  main.cpp
src/lecture_00/cpp/libfoo/: foo.cpp  foo.h
src/lecture_00/java/: BUILD.bazel
src/lecture_00/java/libfoo/: Foo.java
src/lecture_00/python/: BUILD.bazel
src/lecture_00/rust/: main.rs
src/lecture_00/shell/: BUILD.bazel  greeting.bzl
src/lecture_01/: MODULE.bazel  lecture_01.md
src/lecture_01/cpp/: BUILD.bazel  hello_boss.cpp
src/lecture_01/cpp/internal/: BUILD.bazel  os_info.hpp  os_info_darwin.cpp  os_info_linux.cpp
src/lecture_01/print_os/: BUILD.bazel  os_info.bzl  print_os.cpp
src/lecture_02/fmt_version/: BUILD.bazel  MODULE.bazel  fmt_version.hpp
src/lecture_02/fmt_version/src/: fmt_version.cpp
src/lecture_02/fmt_version/test/: BUILD.bazel  test.cpp
src/lecture_02/format_tools/: MODULE.bazel
src/lecture_02/format_tools/bazel_buildifier/: module_extension.bzl  repo_rule.bzl
src/lecture_02/format_tools/bazel_buildifier/private/: buildifier_urls.bzl  os_arch.bzl
src/lecture_02/repo_b1/: MODULE.bazel
src/lecture_02/repo_b2/: BUILD.bazel  MODULE.bazel  main.cpp
src/lecture_02/repo_x/: MODULE.bazel  WORKSPACE
src/lecture_03/: BUILD.bazel  MODULE.bazel  lecture_03.md  main.cc
src/lecture_03/bar/: BUILD.bazel  bar.cc
src/lecture_03/foo/: BUILD.bazel
src/lecture_03/foo/linux/: foo.cc
src/lecture_03/foo/macos/: foo.cc
src/lecture_03/my_platforms/: BUILD.bazel
src/lecture_03/my_platforms/servo_constraint/: BUILD.bazel
src/lecture_03/servo/: BUILD.bazel  servo.hpp
src/lecture_03/servo/real/: servo.cc
src/lecture_03/servo/simulated/: servo.cc
src/lecture_04/: MODULE.bazel  lecture_04.md
src/lecture_04/cpp/: BUILD.bazel  ex0.cpp
src/lecture_04/llvm_toolchain/darwin/: BUILD.bazel  toolchain_config.bzl
src/lecture_04/python/: BUILD.bazel  ex1.py
src/lecture_04/python_toolchain/: BUILD.bazel
tools/: clear_cache.sh  format_all.sh  numbering_markdown.py
