"""Lecture 02 - repo_x - MODULE.bazel"""

# ++++++ Declare Module ++++++
module(
    name = "repo_x",
    version = "0.0.0",
)

bazel_dep(name = "format_tools", version = "0.0.0")
local_path_override(
    module_name = "format_tools",
    path = "../format_tools",
)

# ++++++ Example of using module extension ++++++
buildifier_extension_simple = use_extension(
    "@format_tools//bazel_buildifier:module_extension.bzl",
    "buildifier_module_ext_simple",
)
use_repo(buildifier_extension_simple, "buildifier")

buildifier_extension_complex = use_extension(
    "@format_tools//bazel_buildifier:module_extension.bzl",
    "buildifier_module_ext_complex",
)
buildifier_extension_complex.initialize(
    repo_name = "buildifier_x1",
)
buildifier_extension_complex.initialize(
    repo_name = "buildifier_x2",
)
use_repo(buildifier_extension_complex, "buildifier_x1")
use_repo(buildifier_extension_complex, "buildifier_x2")
use_repo(
    buildifier_extension_complex,
    "buildifier_f1",
    # -> This repo is created in module "format_tools",
    #    but you can still use it in this module
)

# ++++++ Example of using repository rule ++++++
buildifier_repo = use_repo_rule(
    "@format_tools//bazel_buildifier:repo_rule.bzl",
    "buildifier_repo",
)

buildifier_repo(
    name = "buildifier_x3",
    executable_name = "buildifier_x3",
)
