platform(
    name = "simulator",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "//my_platforms/servo_constraint:simulated",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "target",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
        "//my_platforms/servo_constraint:real",
    ],
)
